--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-    
 
+    <header>
+        <h1>Meu site com JavaScript</h1>
+        <p>Construindo sites com javascript</p>
+    </header>
+    
     <script src="script.js"></script>
 </body>
 </html>
