--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
 <body>
     
 
+
+
+    <footer>
+        <p>site feito no senac</p>
+    </footer>
+
     <script src="script.js"></script>
 </body>
 </html>
