--- a/index.html
+++ b/index.html
@@ -7,7 +7,18 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <main>
+        <article>
+            <h1>churrasco</h1>
+        </article>
+        <aside>
+            <ul>
+                <li>Frango</li>
+                <li>Coração</li>
+                <li></li>
+            </ul>
+        </aside>
+    </main>
 
     <script src="script.js"></script>
 </body>
